# onthespot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: docker-push-api.yml  docker-push-ui.yml  quality.yml  (+2 more)
api/: Dockerfile  pyproject.toml
api/src/: portable.py
api/src/onthespot/: accounts.py  constants.py  downloader.py  export_locations.py  library.py  main.py  otsconfig.py  otsconfig_default.json  parse_item.py  parsingworker.py  playlist_automation.py  runtimedata.py  search.py  services_middleware.py  statistics.py  updater.py  utils.py  web.py  youtube_auth.py
api/src/onthespot/api/: apple_music.py  bandcamp.py  crunchyroll.py  deezer.py  generic.py  qobuz.py  registry.py  soundcloud.py  spotify.py  tidal.py  youtube_music.py
api/src/onthespot/resources/: exceptions.py  regexes.py
api/src/onthespot/resources/translations/: ja_JP.qm  ja_JP.ts
api/tests/: _support.py  test_catalog_provider_search.py  test_deployment_contract.py  test_main_smoke.py  test_otsconfig.py  test_restart_persistence.py  test_runtimedata.py  test_spotify_connect_lifecycle.py  test_ui_api_contract.py  test_utils_cache.py  test_youtube_auth.py
companion/: README.md  requirements.txt  run.py
docs/: FEATURE_MATRIX.md  INSTALLATION.md  USAGE.md
scripts/: build_mac.sh  build_windows.bat
src/: portable.py
ui/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
(+66 files in other folders)
