[project]
name = "onthespot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "librespot",
    "m3u8>=6.0.0",
    "music-tag>=0.4.3",
    "mutagen>=1.47.0",
    "pillow>=10.4.0",
    "pywidevine>=1.8.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "yt-dlp>=2025.1.12",
]

[tool.uv.sources]
librespot = { git = "https://github.com/justin025/librespot-python.git" }
[tool.fastapi]
entrypoint = "src.onthespot.main:app"